added abstract class to help with printing, added moves class, and moves history class. Added actions the user can preform, history, undo, jump, quit. Undoing a move has not been implmented yet.

--- a/src/board/CMakeLists.txt
+++ b/src/board/CMakeLists.txt
@@ -3,10 +3,10 @@ cmake_minimum_required(VERSION 3.23.2)
 project(triangle-game-board)
 
 add_library(${PROJECT_NAME} SHARED
-	board.cpp peg.cpp
+	board.cpp peg.cpp move.cpp move_history.cpp
 )
 
 
-set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "board.h;peg.h")
+set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "board.h;peg.h;move.h;move_history.h")
 
 install(TARGETS ${PROJECT_NAME} DESTINATION lib)
